--- a/Destapa-Cañerias/Como-destapar-un-bantilde;o-dificil.html
+++ b/Destapa-Cañerias/Como-destapar-un-bantilde;o-dificil.html
@@ -144,27 +144,27 @@ Como destapar un ba&ntilde;o dificil
 		  <!--TotalPostsList-->
 <!--PostsList-->
          <li  class="list-inline-item">
-       <a href="../Servicios/Con-Que-Destapo-Un-Bantilde;o.html">Con Que Destapo Un Baño </a> 
+       <a href="../Servicios/Como-mejorar-tu-Limpiar-cantilde;erias-de-agua-potable.html">Como mejorar tu Limpiar cañerias de agua potable </a> 
          </li>
 <!--EndPostsList-->
 <!--PostsList-->
          <li  class="list-inline-item">
-       <a href="../Servicios/Bomba-destapacaños-manual.html">Bomba destapacaños manual </a> 
+       <a href="../Servicios/Como-se-puede-destapar-el-baño-sin-destapacaños.html">Como se puede destapar el baño sin destapacaños </a> 
          </li>
 <!--EndPostsList-->
 <!--PostsList-->
          <li  class="list-inline-item">
-       <a href="../Destapa-Cañerias/Destapaciones-En.html">Destapaciones En </a> 
+       <a href="../Servicios/Me-gustaria-conocer-tus-opiniones-acerca-de-Destapar-cantilde;eria-con-vinagre.html">Me gustaria conocer tus opiniones acerca de Destapar cañeria con vinagre </a> 
          </li>
 <!--EndPostsList-->
 <!--PostsList-->
          <li  class="list-inline-item">
-       <a href="../Servicios/Destapar-desague-de-cocina.html">Destapar desague de cocina </a> 
+       <a href="../Servicios/Destapar-oreja-con-mocos.html">Destapar oreja con mocos </a> 
          </li>
 <!--EndPostsList-->
 <!--PostsList-->
          <li  class="list-inline-item">
-       <a href="../Servicios/El-Mejor-Destapa-Cañerias-en-Palermo.html">El Mejor Destapa Cañerias en Palermo </a> 
+       <a href="../Servicios/Destapar-Cañerias-Con-Grasa-en-Palermo.html">Destapar Cañerias Con Grasa en Palermo </a> 
          </li>
 <!--EndPostsList-->
 
@@ -227,42 +227,27 @@ Como destapar un ba&ntilde;o dificil
                   <!--TotalRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Destapa-Cañerias/Estrategias-para-Destapacion-cantilde;erias.html">Estrategias para Destapacion cañerias </a> 
+       <a href="../Destapa-Cañerias/Destapaciones-de-cloacas-miramar.html">Destapaciones de cloacas miramar </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Destapa-Cañerias/Destapacaños-truper-para-taladro.html">Destapacaños truper para taladro </a> 
+       <a href="../Destapa-Cañerias/Sonda-destapacaños-pretul.html">Sonda destapacaños pretul </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Servicios/Agencia-sur-bahia-blanca.html">Agencia sur bahia blanca </a> 
+       <a href="../Servicios/Con-Que-Destapo-Cañerias-en-Palermo.html">Con Que Destapo Cañerias en Palermo </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Servicios/El-Plomero-Destapa-Cañerias-en-Palermo.html">El Plomero Destapa Cañerias en Palermo </a> 
+       <a href="../Servicios/Destapa-cañerias-liquido-precio.html">Destapa cañerias liquido precio </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Destapa-Cañerias/Destapar-cañerias-casero-vinagre.html">Destapar cañerias casero vinagre </a> 
-         </li>			  </div>
-<!--EndRandPosts-->
-<!--RandPosts-->
-             <div id="recent-post">         <li>
-       <a href="../Destapa-Cañerias/Como-destapar-un-inodoro-sin-ventosa.html">Como destapar un inodoro sin ventosa </a> 
-         </li>			  </div>
-<!--EndRandPosts-->
-<!--RandPosts-->
-             <div id="recent-post">         <li>
-       <a href="../Servicios/Destapaciones-de-cañerias-ituzaingo.html">Destapaciones de cañerias ituzaingo </a> 
-         </li>			  </div>
-<!--EndRandPosts-->
-<!--RandPosts-->
-             <div id="recent-post">         <li>
-       <a href="../Servicios/Como-se-escribe-inodoro-en-ingles.html">Como se escribe inodoro en ingles </a> 
+       <a href="../Servicios/Con-Que-Destapo-Un-Bantilde;o.html">Con Que Destapo Un Baño </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
@@ -272,12 +257,27 @@ Como destapar un ba&ntilde;o dificil
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Servicios/Proceso-de-la-planta-para-niños.html">Proceso de la planta para niños </a> 
+       <a href="../Destapa-Cañerias/Como-destapar-un-wc-con-soda-caustica.html">Como destapar un wc con soda caustica </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Destapa-Cañerias/Como-destapar-la-cañeria-del-baño-con-soda-caustica.html">Como destapar la cañeria del baño con soda caustica </a> 
+       <a href="../Servicios/Destapar-Cantilde;eria-De-Inodoro.html">Destapar Cañeria De Inodoro </a> 
+         </li>			  </div>
+<!--EndRandPosts-->
+<!--RandPosts-->
+             <div id="recent-post">         <li>
+       <a href="../Destapa-Cañerias/Harpic-destop-instrucciones-de-uso.html">Harpic destop instrucciones de uso </a> 
+         </li>			  </div>
+<!--EndRandPosts-->
+<!--RandPosts-->
+             <div id="recent-post">         <li>
+       <a href="../Destapa-Cañerias/Destapacaños-liquido-para-inodoro.html">Destapacaños liquido para inodoro </a> 
+         </li>			  </div>
+<!--EndRandPosts-->
+<!--RandPosts-->
+             <div id="recent-post">         <li>
+       <a href="../Servicios/Ideas-innovadoras-para-Destapar-la-cantilde;eria.html">Ideas innovadoras para Destapar la cañeria </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 
